[gd_scene load_steps=2 format=3 uid="uid://bck8qp7yjh3mr"]

[ext_resource type="Script" path="res://Scripts/Editor/EditorMenuBar.gd" id="1_d3kqr"]

[node name="EditorMenuBar" type="MenuBar"]
offset_right = 800.0
offset_bottom = 25.0
script = ExtResource("1_d3kqr")

[node name="FileMenu" type="PopupMenu" parent="."]
title = "File"
position = Vector2i(0, 27)
size = Vector2i(200, 192)
item_count = 8
item_0/text = "New Chart"
item_0/id = 0
item_0/accel = 1
item_0/shortcut_disabled = true
item_1/text = "Open Chart..."
item_1/id = 1
item_1/accel = 1
item_1/shortcut_disabled = true
item_2/text = ""
item_2/id = 2
item_2/separator = true
item_3/text = "Save"
item_3/id = 3
item_3/accel = 1
item_3/shortcut_disabled = true
item_4/text = "Save As..."
item_4/id = 4
item_4/accel = 1
item_4/shortcut_disabled = true
item_5/text = ""
item_5/id = 5
item_5/separator = true
item_6/text = "Import Chart..."
item_6/id = 6
item_7/text = "Export Chart..."
item_7/id = 7

[node name="EditMenu" type="PopupMenu" parent="."]
title = "Edit"
position = Vector2i(0, 27)
size = Vector2i(200, 192)
item_count = 8
item_0/text = "Undo"
item_0/id = 0
item_0/accel = 1
item_0/shortcut_disabled = true
item_0/disabled = true
item_1/text = "Redo"
item_1/id = 1
item_1/accel = 1
item_1/shortcut_disabled = true
item_1/disabled = true
item_2/text = ""
item_2/id = 2
item_2/separator = true
item_3/text = "Cut"
item_3/id = 3
item_3/accel = 1
item_3/shortcut_disabled = true
item_4/text = "Copy"
item_4/id = 4
item_4/accel = 1
item_4/shortcut_disabled = true
item_5/text = "Paste"
item_5/id = 5
item_5/accel = 1
item_5/shortcut_disabled = true
item_6/text = "Delete"
item_6/id = 6
item_6/accel = 1
item_6/shortcut_disabled = true
item_7/text = ""
item_7/id = 7
item_7/separator = true

[node name="ViewMenu" type="PopupMenu" parent="."]
title = "View"
position = Vector2i(0, 27)
size = Vector2i(200, 128)
item_count = 5
item_0/text = "Zoom In"
item_0/id = 0
item_0/accel = 1
item_0/shortcut_disabled = true
item_1/text = "Zoom Out"
item_1/id = 1
item_1/accel = 1
item_1/shortcut_disabled = true
item_2/text = "Reset Zoom"
item_2/id = 2
item_2/accel = 1
item_2/shortcut_disabled = true
item_3/text = ""
item_3/id = 3
item_3/separator = true
item_4/text = "Toggle Grid"
item_4/id = 4
item_4/checkable = 1
item_4/checked = true

[node name="PlaybackMenu" type="PopupMenu" parent="."]
title = "Playback"
position = Vector2i(0, 27)
size = Vector2i(200, 80)
item_count = 3
item_0/text = "Play/Pause"
item_0/id = 0
item_0/accel = 1
item_0/shortcut_disabled = true
item_1/text = "Stop"
item_1/id = 1
item_1/accel = 1
item_1/shortcut_disabled = true
item_2/text = "Test Play"
item_2/id = 2
item_2/accel = 1
item_2/shortcut_disabled = true
